@@ -1,7 +1,9 @@
 # Offpunk History
 
 ## 2.1 - Unreleased
+- ansicat: freshly updated gemtext/rss links are highlighted ("new_link" theme option)
 - ansicat: added "--mode" option
+- ansicat: avoid a crash when urllib.parse.urljoin fails
 
 ## 2.0 - November 16th 2023
 Changes since 1.10
